fixed spacing

--- a/app/assets/stylesheets/companies.css.sass
+++ b/app/assets/stylesheets/companies.css.sass
@@ -44,4 +44,7 @@
       font-weight: bold
       color: black
 
+#SEC
+  white-space: pre-wrap
+
 
