--- a/app/assets/stylesheets/snippets.css.sass
+++ b/app/assets/stylesheets/snippets.css.sass
@@ -13,3 +13,5 @@
     .event-date
       float: right
       font-size: 0.7em
+    .snippet-text
+      white-space: pre-wrap
